REGRESSION (r243726): Crash at unrecognized selector: -[WKWebpagePreferences webpagePreferences] https://bugs.webkit.org/show_bug.cgi?id=196496 <rdar://problem/49521634>

Reviewed by Chris Dumez.

Source/WebKit:

r243726 made an incorrect assumption that all callers of -decidePolicyForNavigationAction:decisionHandler: and
-decidePolicyForNavigationAction:userInfo:decisionHandler: must be instances of _WKWebsitePolicies, as opposed
to the new WKWebpagePreferences. However, it's possible for clients (in this case, Safari) to already generate
and pass in an instance of WKWebpagePreferences by bridging the C API opaque ref (WKWebsitePoliciesRef) into the
Objective-C object (which is now WKWebpagePreferences, after my change).

To maintain binary compatibility of trunk WebKit against prior versions of Safari, we need to handle both
WKWebpagePreferences and the soon-to-be-deprecated _WKWebsitePolicies in the navigation action policy decision
handler.

Tests:  WebKit.WebsitePoliciesWithBridgingCast
        WebKit.WebsitePoliciesWithUnexpectedType

* UIProcess/Cocoa/NavigationState.mm:
(WebKit::NavigationState::NavigationClient::decidePolicyForNavigationAction):

Tools:

Add new API tests (see WebKit ChangeLog for more detail).

* TestWebKitAPI/Tests/WebKitCocoa/WebsitePolicies.mm:
(-[WebsitePoliciesNavigationDelegate _webView:decidePolicyForNavigationAction:userInfo:decisionHandler:]):
(TEST):


Canonical link: https://commits.webkit.org/210764@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243753 268f45cc-cd09-0410-ab3c-d52691b4dbfc